[workspace]
members = [
  "engine",
  "engine/runtime",
  # "bindings/native",
  "client",
  "utils",
  "derive",
  "p2p",
  "stm"
]
exclude = [
  "products/commandline",
  "products/desktop",
  "products/SHaaS",
]

[profile.release]
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true
panic = "abort"

[profile.bench]
overflow-checks = true
