[workspace]
members = [
  "engine",
  "engine/runtime",
  "bindings/native",
  "client",
  "utils",
  "derive",
  "migrate",
]
exclude = [
  "products/commandline",
  "products/desktop",
  "products/SHaaS",
  "stm"
]

[profile.release]
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true
panic = "abort"

[profile.bench]
overflow-checks = true
