[package]
name = "iota_stronghold"
version = "0.4.1"
authors = [
  "IOTA Stiftung",
  "tensor-programming <tensordeveloper@gmail.com>"
]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "Client interface for Stronghold"
keywords = [ "iota", "stronghold", "security" ]
categories = [ "security" ]
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
zeroize = { version = "1.6", features = [ "serde", "derive" ] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
riker = "0.4"

  [dependencies.stronghold_engine]
  path = "../engine"
  version = "0.4"

  [dependencies.iota-crypto]
  version = "0.21.2"
  features = [
  "random",
  "ed25519",
  "secp256k1",
  "sha",
  "hmac",
  "bip39-en",
  "slip10",
  "chacha"
]

  [dependencies.stronghold-communication]
  path = "../communication"
  optional = true
  version = "0.4.1"

  [dependencies.stronghold-utils]
  path = "../utils"
  version = "0.3"

[features]
communication = [ "stronghold-communication" ]

[dev-dependencies]
hex = "0.4.2"
criterion = "0.3.3"
clap = { version = "3.0.0-beta.1", features = [ "yaml" ] }
rand = "0.8.3"

[[bench]]
name = "benchmark"
harness = false
