[package]
name        = "iota_stronghold_new"
version     = "0.5.0"
edition     = "2021"
authors     = ["IOTA Stiftung"]
license     = "Apache-2.0"

[dependencies]
thiserror   = "1.0.30" 
log         = "0.4.14"
zeroize     = { version = "1.5.0", features = ["zeroize_derive"] }
rlu         = { package = "stronghold_rlu", path = "../rlu"}

[dev-dependencies]
rand_utils  = { package = "stronghold-utils", path = "../utils/" }
tokio       = { version = "1.15.0", features = ["full"] }
criterion   = { version = "0.3", features = ["async_tokio"] }
env_logger  = { version = "0.9.0" }
ctor        = { version = "0.1.21"}
rand        = { version = "0.8.4" }