[package]
name        = "iota_stronghold_new"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
readme      = "README.md"
description = "Client interface for Stronghold"
authors     = ["IOTA Stiftung"]
keywords    = [ "iota", "stronghold", "security" ]
categories  = [ "security" ]
homepage    = "https://wiki.iota.org/stronghold.rs/welcome"
repository  = "https://github.com/iotaledger/stronghold.rs"

[features]
default     = ["std"]
std         = [] 

[dependencies]
thiserror   = "1.0.30" 
log         = "0.4.14"
zeroize     = { version = "1.5.0", features = ["zeroize_derive"] }
serde       = { version = "1.0",   features = [ "derive" ] }
rlu         = { package = "stronghold-rlu", path = "../rlu/"}

[dev-dependencies]
rand_utils  = { package = "stronghold-utils", path = "../utils/" }
tokio       = { version = "1.15.0", features = ["full"] }
criterion   = { version = "0.3", features = ["async_tokio"] }
env_logger  = { version = "0.9.0" }
ctor        = { version = "0.1.21"}
rand        = { version = "0.8.4" }

[[bench]]
name        = "config"
harness     = false