[package]
name                    = "iota_stronghold_new"
version                 = "0.1.0"
edition                 = "2021"
license                 = "Apache-2.0"
readme                  = "README.md"
description             = "Client interface for Stronghold"
authors                 = ["IOTA Stiftung"]
keywords                = [ "iota", "stronghold", "security" ]
categories              = [ "security" ]
homepage                = "https://wiki.iota.org/stronghold.rs/welcome"
repository              = "https://github.com/iotaledger/stronghold.rs"

[features]
default                 = ["std"]
std                     = [] 

[dependencies]
thiserror               = { version = "1.0.30" }
zeroize                 = { version = "1.4.3", features = ["zeroize_derive"] }
serde                   = { version = "1.0",   features = [ "derive" ] }
iota-crypto             = { version = "0.8.0", features = [ "aes", "random", "ed25519", "sha", "hmac", "bip39-en", "bip39-jp", "slip10", "chacha", "x25519" ] }
hkdf                    = { version = "0.11" }
bincode                 = { version = "1.3" }

# internal crates
rlu                     = { package = "stronghold-rlu",     path = "../rlu/"}
engine                  = { package = "stronghold_engine",  path = "../engine" }
stronghold_utils        = { package = "stronghold-utils",   path = "../utils/" }

[dev-dependencies]
tokio                   = { version = "1.15.0", features = ["full"] }
criterion               = { version = "0.3",    features = ["async_tokio"] }
env_logger              = { version = "0.9.0" }
ctor                    = { version = "0.1.21"}
rand                    = { version = "0.8.4" }
clap                    = { version = "3.1.6", features = [ "derive" ]}
log                     = { version = "0.4.14" }
base64                  = { version = "0.13.0" }
regex                   = { version = "1.5.5" }


[[bench]]
name                    = "config"
harness                 = false

[[example]]
name                    = "cli"