[package]
name = "commandline"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
thiserror = "1.0"
anyhow = "1.0"

#lib sodium
sodiumoxide = "0.2"

zeroize = {version = "1.1", features = ["zeroize_derive"]}

vault = {path = "../vault"}
crypto = {path = "../crypto"}
random = {path = "../random"}
snapshot = {path = "../snapshot"}
primitives = {path = "../primitives"}

[lib]
name = "shared"
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"