[package]
name = "commandline"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }

#lib sodium
sodiumoxide = "0.2"

vault = {path = "../vault"}
crypto = {path = "../crypto"}
random = {path = "../random"}
snapshot = {path = "../snapshot"}
primitives = {path = "../primitives"}

[lib]
name = "commandline"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"