[package]
name = "stronghold-communication-refactored"
version = "0.3.0"
authors = [
  "IOTA Stiftung",
  "Elena Frank <elena.frank@iota.org"
]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://stronghold.docs.iota.org"

[lib]
name = "communication_refactored"

[dependencies]
futures = "0.3"
libp2p = { version = "0.37", default-features = false, features = [
  "dns-async-std",
  "mdns",
  "noise",
  "relay",
  "tcp-async-io",
  "yamux",
  "websocket"
] }
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
smallvec = "1.6.1"
stronghold-derive = {path = "../derive", version = "0.2.0"}

[features]
default = [ "mdns" ]
mdns = [ ]

[dev-dependencies]
rand = "0.8.3"
  