[package]
name = "stronghold-communication-refactored"
version = "0.3.0"
authors = [
  "IOTA Stiftung",
  "Elena Frank <elena.frank@iota.org"
]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://stronghold.docs.iota.org"

[lib]
name = "communication_refactored"

[dependencies]
async-std = "1.9"
futures = "0.3"
libp2p = { version = "0.38", default-features = false, features = [
  "dns-async-std",
  "noise",
  "relay",
  "yamux",
  "websocket"
] }
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
smallvec = "1.6.1"
stronghold-derive = {path = "../derive", version = "0.2.0"}

[features]
default = [ "mdns", "tcp-transport"]
mdns = ["libp2p/mdns"]
tcp-transport = ["libp2p/tcp-async-io"]

[dev-dependencies]
rand = "0.8.3"
libp2p-tcp = { version = "0.28"}
  