[package]
name = "stronghold-communication"
version = "0.2.0"
authors = [ "Elena Frank <elena.frank@iota.org>" ]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
async-std = "1.6"
async-trait = "0.1"
futures = "0.3"
clap = { version = "3.0.0-beta.1", features = [ "yaml" ] }
libp2p = { version = "0.35", default-features = false, features = [
  "dns",
  "identify",
  "mdns",
  "mplex",
  "noise",
  "request-response",
  "tcp-async-io",
  "yamux",
  "websocket"
] }
regex = "1.3"
thiserror = "1.0"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
riker =  "0.4"

stronghold-utils = {version = "0.1", path = "../utils"}

[features]
default = [ "mdns"]
mdns = [ ]

[dev-dependencies]
communication-macros = {path = "../communication/communication-macros"}