[package]
name = "stronghold-communication"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://stronghold.docs.iota.org"

[lib]
name = "communication"

[dependencies]
async-std = "1.6"
async-trait = "0.1"
futures = "0.3"
clap = { version = "3.0.0-beta.1", features = [ "yaml" ] }
libp2p = { version = "0.37", default-features = false, features = [
  "dns-async-std",
  "identify",
  "mdns",
  "noise",
  "relay",
  "request-response",
  "tcp-async-io",
  "yamux",
  "websocket"
] }
regex = "1.3"
thiserror = "1.0"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
riker = "0.4"
communication-macros = { path = "communication-macros", version = "0.1.0" }

[dependencies.stronghold-utils]
path = "../utils/utils"
version = "0.2"

[features]
default = [ "mdns" ]
mdns = [ ]
