[package]
name = "crypto"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = {path = "../primitives", version = "0.1"}
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
json = "0.12"
hex = "0.4"

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true