[package]
name = "stronghold-derive"
version = "0.1.1"
authors = [
  "IOTA Stiftung",
  "tensor-programming <tensordeveloper@gmail.com>"
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "parsing", "full", "extra-traits", "proc-macro" ] }
quote = "1.0"
proc-macro2 = "1.0"
