[package]
name = "stronghold_engine"
version = "1.0.0"
authors = [
  "IOTA Stiftung",
  "tensorprogramming <tensordeveloper@gmail.com>"
]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = [ "iota", "stronghold", "cryptography", "security" ]
categories = [ "security" ]
description = "A rust implementation of the IOTA Stronghold low-level libraries"
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "engine"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
dirs-next = "2.0"
hex = "0.4.2"
paste = "1.0.1"
once_cell = "1.4"
zeroize = { version = "1.3.0", features = [ "zeroize_derive" ] }
serde = { version = "1.0", features = [ "derive" ] }

  [dependencies.stronghold-runtime]
  path = "runtime"
  version = "1.0"

  [dependencies.digest]
  version = "0.10.1"
  optional = true
  default-features = false

  [dependencies.iota-crypto]
  version = "0.15.1"
  features = [
  "random",
  "chacha",
  "hmac",
  "sha",
  "x25519",
  "blake2b",
  "std"
]
  default-features = false

[dev-dependencies]
tempfile = "3.1.0"
proptest = "1.0.0"
criterion = "0.4"
json = "0.12"

  [dev-dependencies.stronghold-utils]
  path = "../utils"
  version = "1.0.0"

[[bench]]
name = "engine_bench"
harness = false
