[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stronghold_engine = { path = "../engine" }
iota-crypto = { git = "https://github.com/semenov-vladyslav/crypto.rs", branch = "age", features = ["pbkdf"] }
