[package]
name = "stronghold-p2p"
version = "0.3.0"
authors = [
  "IOTA Stiftung",
  "Elena Frank <elena.frank@iota.org"
]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://stronghold.docs.iota.org"

[lib]
name = "p2p"

[dependencies]
futures = "0.3"
libp2p = { version = "0.41.0", default-features = false, features = ["noise", "yamux", "relay"] }
pin-project = "1.0.8"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
smallvec = "1.6.1"
stronghold-derive = { path = "../derive", version = "0.2" }
thiserror = "1.0.30"
tokio = { version = "1.10", default-features = false, features = ["rt", "sync"] }
instant = "0.1.11"

[features]
default = [ "tcp-transport", "mdns"]
tcp-transport = ["libp2p/tcp-tokio", "libp2p/dns-tokio", "libp2p/websocket"]
mdns = ["libp2p/mdns"]

[dev-dependencies]
actix-rt = "2.5"
iota_stronghold = { path = "../client" , features = ["p2p"] }
regex = "1.5"
stronghold-utils = { path = "../utils", version = "0.3.0" }
tokio = {version = "1.10", features = ["time", "macros", "io-std", "io-util"] }
libp2p = { version = "0.41.0", default-features = false, features = ["tcp-tokio"] }
