[package]
name = "stronghold-p2p"
version = "0.4.2"
authors = [ "IOTA Stiftung", "Elena Frank <elena.frank@iota.org" ]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "Networking functionality for Stronghold"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://wiki.iota.org/stronghold.rs/welcome"
documentation = "https://wiki.iota.org/stronghold.rs/welcome"
keywords = [ "iota", "stronghold", "security", "networking" ]
categories = [ "security" ]

[lib]
name = "p2p"

[dependencies]
stronghold-derive = { path = "../derive", version = "0.3" }
libp2p = { version = "0.43.0", default-features = false, features = [ "noise", "yamux", "mdns", "relay", "serde" ] }
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
smallvec = { version = "1.6.1", features = [ "serde" ] }
tokio = { version = "1.10", default-features = false, features = [ "rt", "sync" ] }
futures = "0.3"
thiserror = "1.0.30"
pin-project = "1.0.8"
wasm-timer = "0.2.5"

[features]
default = [ "tcp-transport" ]
tcp-transport = [ "libp2p/tcp-tokio", "libp2p/dns-tokio", "libp2p/websocket" ]

[dev-dependencies]
actix-rt = "2.5"
regex = "1.5"
iota_stronghold = { path = "../client", features = [ "p2p" ] }
stronghold-utils = { path = "../utils", version = "0.4.0" }
tokio = { version = "1.10", features = [ "time", "macros", "io-std", "io-util" ] }
libp2p = { version = "0.43.0", default-features = false, features = [ "tcp-tokio" ] }
