[package]
name = "stronghold-policy"
version = "0.1.0"
edition = "2018"
authors = ["IOTA Stiftung"]
license = "Apache-2.0"
readme = "README.md"
description = "Common Policy Manager for Stronghold"
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "policyengine"

[dependencies.stronghold-utils]
path    = "../utils"
version = "0.3"

[dependencies.stronghold-policy-macros]
path    = "macros"
version = "0.1"

[dependencies.thiserror]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.once_cell]
version = "1.8.0"

[dependencies.rand]
version = "0.8"

[dev-dependencies]
criterion = "0.3.4"

# Tests Config
[[test]]
name = "macros_tests"
path = "tests/macro_tests.rs"

[[test]]
name = "policy_tests"
path = "tests/policy_tests.rs"
