[package]
name = "stronghold-rules"
version = "0.1.0"
edition = "2018"
authors = ["IOTA Stiftung"]
license = "Apache-2.0"
readme = "README.md"
description = "Common Rules Manager for Stronghold"
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "rulesengine"

[dependencies.stronghold-rules-macros]
path    = "macros"
version = "0.1"

[dependencies.thiserror]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dev-dependencies]
criterion = "0.3.4"


# Tests Config

[[test]]
name = "macros_tests"
path = "tests/macros.rs"

[[test]]
name = "policy_tests"
path = "tests/policy.rs"
