[package]
name = "stronghold-runtime"
version = "0.2.0"
authors = [ "Gustav Behm <gustav.behm@iota.org>" ]
edition = "2018"
license = "Apache-2.0"
description = "Runtime zone for process isolation"
readme = "README.md"
keywords = [ "iota", "stronghold", "security" ]
categories = [ "security" ]
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "runtime"

[features]
default = []
stdalloc = []

[dependencies]
memoffset = "0.6.1"

[dependencies.libc]
version = "0.2.79"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
features = [ "spin_no_std" ]

[dependencies.num]
version = "0.3.0"
default-features = false

[dependencies.zeroize]
version = "1.1.1"
default-features = false

[build-dependencies]
bindgen = "0.55.1"

[dev-dependencies.rand]
version = "0.8.3"
default-features = false
features = [ "getrandom" ]
