[package]
name = "stronghold-runtime"
version = "0.2.0"
authors = [ "Gustav Behm <gustav.behm@iota.org>" ]
edition = "2018"
license = "Apache-2.0"
description = "Runtime zone for process isolation"
readme = "README.md"
keywords = [ "iota", "stronghold", "security" ]
categories = [ "security" ]
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "runtime"

[features]
default = []
stdalloc = []

[dependencies]
libsodium-sys = "0.2"

