[package]
name = "snapshot"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
thiserror = "1.0"
anyhow = "1.0"

# crypto
sodiumoxide = "0.2"

# file system
dirs = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

crypto = {path = "../crypto"}
random = {path = "../random"}

