[package]
name        = "stronghold-stm"
version     = "0.1.0"
edition     = "2021"
authors     = ["Matthias Kandora <matthias.kandora@iota.org>"]

[lib]
path        = "src/lib.rs"

[dependencies]
thiserror   = "1.0.30" 
zeroize     = "1.5.0"

[dev-dependencies]
tokio       = { version = "1.15.0", features = ["full"] }