[package]
name = "stronghold-stm"
version = "0.4.3"
edition = "2021"
authors = [ "IOTA Stiftung" ]
license = "Apache-2.0"
description = "Software transactional memory"
repository = "https://github.com/iotaledger/stronghold.rs"
homepage = "https://wiki.iota.org/stronghold.rs/welcome"
documentation = "https://wiki.iota.org/stronghold.rs/welcome"
keywords = [ "iota", "stronghold", "security" ]

[lib]
path = "src/lib.rs"

[features]
default = ["threaded"]
async = ["futures"]
threaded = []
verbose = []

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
zeroize = { version = "1.4.3", features = [ "zeroize_derive" ] }
lazy_static = { version = "1.4.0" }
atom = { version = "0.4.0" }
futures = {version = "0.3.21", optional = true}

[dev-dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
criterion = { version = "0.3", features = [ "async_tokio" ] }
env_logger = { version = "0.9.0" }
ctor = { version = "0.1.21" }
rand = { version = "0.8.4" }
threadpool = { version = "1.8.1" }
rand_utils = { package = "stronghold-utils", path = "../utils/" }

[[bench]]
name = "config"
harness = false

[[test]]
name = "test_rlu"
