[package]
name = "iota-stronghold"
version = "0.1.0"
authors = ["Marcelo R. Bianchi <marcelo.bianchi@iota.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["iota", "stronghold"]
categories = [ "security" ]
description = "A rust implementation of the IOTA Stronghold low-level libraries"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "stronghold"

[dependencies]
bee-ternary = { git = "https://github.com/iotaledger/bee", features = ["serde1"] }

#engine
stronghold-engine = {path = "../engine"}

#stronghold
serde = {version = "1.0.114"}
serde_json = "1.0"
