[package]
name = "iota-stronghold"
version = "0.1.0"
authors = ["Marcelo R. Bianchi <marcelo.bianchi@iota.org>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["iota", "stronghold"]
categories = [ "security" ]
description = "A rust implementation of the IOTA Stronghold low-level libraries"
homepage = "https://iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[lib]
name = "stronghold"

[dependencies]
bee-signing-ext = { git = "https://github.com/wusyong/bee-p.git", branch = "sign-ext" , version = "^0.1.0-alpha" }

#engine
stronghold-engine = {path = "../engine"}
bincode = "1.3.1"

#stronghold
serde = {version = "1.0.114"}
serde_json = "1.0"
#temporary, only for development purpose
tiny-bip39 = "0.7.3"
hex = "0.4.2"

unicode-normalization = "0.1.13"
hmac = "0.7.1"
sha2 = "0.8.1"
rand = "0.7"
pbkdf2 = "0.3.0"

bech32 = "0.7.2"
base64 = "0.12.3"

regex = "1"