[package]
name = "stronghold-utils"
version = "0.3.0"
authors = [
  "IOTA Stiftung",
  "tensor-programming <tensordeveloper@gmail.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Utils for the iota_stronghold library"
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[dependencies]
futures = "0.3"
rand = "0.8.3"
riker = "0.4"

  [dependencies.stronghold-derive]
  path = "../derive"
  version = "0.2.0"
